Bluelabel update augustus'18
added icon, title tag, iframe NOS, youtube video, tekst aanpassingen, links onder logo's.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="BlueLabel">
-  <title>BlueLabel | Infosite</title>
+  <link rel="icon" href="https://i.imgur.com/CNNNjF1.jpg">
+  <title>BlueLabel | De Waterkwetsbaarheidsscan</title>
 
   <link href="https://fonts.googleapis.com/css?family=Signika:300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -40,30 +41,46 @@
     </div>
   </div>
 
+  
+  
   <div class="curious" id="btn-go-to-map">
     <div class="container">
       <div class="row">
         <div class="colxs12 colsm12 colmd12 collg12">
           <div class="curious-content">
-            <video width="640" height="480" controls>
-              <source src="video/NOS_bluelabel_fragment.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+<h2>Bluelabel maakt de risico’s van regenwateroverlast zichtbaar</h2>
+	    <iframe id="map" width="560" height="315" src="https://www.youtube.com/embed/VgJ-cP2Bmxw?rel=0" style="border:none; allow="autoplay; encrypted-media" allowfullscreen></iframe>
+           			<h4>Van elke woning en bedrijfspand in Nederland wordt een BlueLabel bepaald</h4>
+					<p></p>
+					
+			<h2>Benieuwd naar de labels in uw postcodegebied?</h2>
+			<h4>Zoek op uw postcode in de NOS kaart</h4>
+			<div class="curious" id="btn-go-to-map">
+    <div class="container">
+      <div class="row">
+        <div class="colxs12 colsm12 colmd12 collg12">
+          <div class="curious-content">
+            <iframe width="560" height="315" src="https://app.nos.nl/datavisualisatie/hoosbuien-wateroverlast/index.html#slide-0" style="border:none; allowtransparency="true"></iframe>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="curious" id="btn-go-to-map">
+  </div>	
+  <a href="https://nos.nl/artikel/2242363-als-die-hoosbuien-komen-blijft-het-dan-droog-in-je-huis.html" target="_blank"><h5>Lees het NOS artikel</h5></a>
+  <p></p>
+		<h4>Bekijk de NOS journaal uitzending</h4>
+		<div class="curious" id="btn-go-to-map">
     <div class="container">
       <div class="row">
         <div class="colxs12 colsm12 colmd12 collg12">
           <div class="curious-content">
-
-	    <iframe id="map" width="560" height="315" src="https://www.youtube.com/embed/VgJ-cP2Bmxw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            <h4>Van elke woning en bedrijfspand in Nederland wordt een BlueLabel bepaald</h4>
-            <h2>Benieuwd of er voor uw gemeente al een BlueLabel beschikbaar is?</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8zYyV97zsSA" style="border:none; allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
+            <h2>Voor welke gebieden zijn bluelabels bepaald?</h2>
             <h4>Bekijk het op onze voortgangskaart</h4>
             <img src="images/scrollDownArrow.svg" class="scroll-down-arrow" />
           </div>
@@ -193,10 +210,10 @@
               <p>BlueLabel is een initiatief van Achmea, Royal HaskoningDHV en Nelen &amp; Schuurmans.</p>
               <hr />
               <div class="partner-logos">
-                <img src="images/logo-achmea.png" />
-                <img src="images/logo-Royal_HaskoningDHV.png" />
-                <img src="images/logo-nens.png" />
-              </div>
+			  <a href="https://www.achmea.nl/Paginas/default.aspx" target="_blank"><img width="50" align="cemter" src="images/logo-achmea.png" /></a>
+			    <a href="https://www.royalhaskoningdhv.com/nl-nl/nederland" target="_blank"><img width="50" align="cemter" src="images/logo-Royal_HaskoningDHV.png" /> 
+                <a href="https://www.nelen-schuurmans.nl/" target="_blank"><img width="50" align="cemter" src="images/logo-nens.png" /></a>
+			</div>
             </div>
             <div style="width:50%;padding:20px;">
               <h3 id="scrollToInteresse">Interesse in BlueLabel?</h3>
